--- a/get_together/assets/package.json
+++ b/get_together/assets/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "sass.js": "^0.11.1",
+    "select2": "^4.0.13",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
