--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==2.0.12
 django-appconf==1.0.2
+django-crispy-forms==1.9.2
 django-ical==1.4
 django-imagekit==4.0.2
 django-imagekit-cropper==1.16
